--- a/environment.yml
+++ b/environment.yml
@@ -1,14 +1,17 @@
 name: dsci522
 channels:
-- conda-forge
-- defaults
+  - conda-forge
+  - defaults
 dependencies:
-- python=3.12.11
-- ipython=9.5.0
-- ipykernel=6.30.1
-- matplotlib=3.10.6
-- pandas=2.3.2
-- scikit-learn=1.7.2
-- seaborn=0.13.2
-- scienceplots=2.2.0
-- pip=25.2
+  - python=3.11.6
+  - ipykernel=6.30.1
+  - matplotlib=3.10.6
+  - pandas=2.3.2
+  - scikit-learn=1.7.2
+  - seaborn=0.13.2
+  - scienceplots=2.2.0
+  - notebook=6.5.4
+  - pandera=0.20.4
+  - pip
+  - pip:
+      - deepchecks==0.18.1
