--- a/environment.yml
+++ b/environment.yml
@@ -13,6 +13,7 @@ dependencies:
   - notebook=6.5.4
   - pandera=0.20.4
   - click=8.2.1
+  - quarto=1.8.26
   - pip
   - pip:
       - deepchecks==0.18.1
