--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   analysis-env:
-    image: yhouyang02/dsci522-project-group01:latest
+    image: yhouyang02/dsci522-project-group01:f843ba1
     ports:
       - "8888:8888"
     volumes:
